--- a/index.html
+++ b/index.html
@@ -64,81 +64,94 @@ https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
             </li>
           </ul>
         </address>
-        <button class="menu-open" data-menu-open type="button">O</button>
-      </div>
 
 
-      <div class="mob-menu is-hidden" data-menu>
-        <div class="container">
-          <div>
-        <button class="menu-close" data-menu-close type="button">X</button>
-        <ul class="menu list mob-menu-nav">
-          <li class="mob-menu-item">
-            <a
-              class="mob-menu-link menu-link-studio menu-link-active link current"
-              href="./index.html"
-              >Studio</a
-            >
-          </li>
-          <li class="mob-menu-item">
-            <a class="mob-menu-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="mob-menu-item">
-            <a class="mob-menu-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <address>
-          <ul class="menu list mob-menu-adress">
-            <li>
+      <!-- =============MOB MENU============== -->
+        <button 
+        class="menu-open is-open" data-menu-button 
+        type="button"
+        aria-expanded="false"
+          aria-controls="mobile-menu">
+          <svg width="30" height="19"
+          aria-label="Переключатель мобильного меню">
+            <use class="icon-menu" href="./images/sprite.svg#menu"></use>
+            <use class="icon-cross" href="./images/sprite.svg#cross"></use>
+          </svg>
+        </button>
+
+        <div class="mobile-menu" id="mobile-menu" data-menu>
+          <div class="container">
+            <div>
+
+          <ul class="menu list mob-menu-nav">
+            <li class="mob-menu-item">
               <a
-                class="mob-addres-link link-mail link"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+                class="mob-menu-link menu-link-studio menu-link-active link current"
+                href="./index.html"
+                >Studio</a
               >
             </li>
-            <li>
-              <a class="mob-addres-link-tel link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+            <li class="mob-menu-item">
+              <a class="mob-menu-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="mob-menu-item">
+              <a class="mob-menu-link link" href="">Contacts</a>
             </li>
           </ul>
-        </address>
-        <ul class="social-list list mob">
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg class="social-link-icon" width="16" height="16">
-                <use href="./images/sprite.svg#instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg class="social-link-icon" width="16" height="16">
-                <use href="./images/sprite.svg#twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg class="social-link-icon" width="16" height="16">
-                <use href="./images/sprite.svg#facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg class="social-link-icon" width="16" height="16">
-                <use href="./images/sprite.svg#linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-      </div>
-      </div>
-    </header>
+        </div>
+
+
+        <div class="mob-cont-second">
+          <address>
+            <ul class="menu list mob-menu-adress">
+              <li>
+                <a
+                  class="mob-addres-link link-mail link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="mob-addres-link-tel link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="social-list list mob">
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg class="social-link-icon" width="16" height="16">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg class="social-link-icon" width="16" height="16">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg class="social-link-icon" width="16" height="16">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg class="social-link-icon" width="16" height="16">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+          </div>
+        </div>
+                </header>
 
     <main>
       <!-- =================HERO =======-->
